--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,73 +1,62 @@
 @import "_base.css";
-
 /* fixing header position*/
-
 body {
   margin: 0;
 }
-
 #profile-page {
-  height: 100vh;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto 1fr auto;
   grid-template-areas: "header" "main" "footer";
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 1fr;
+  height: 100vh;
 }
-
 #profile-page > header {
   grid-area: "header";
 }
-
 #profile-page > main {
   grid-area: "main";
-  overflow: auto;
   padding: 15px 5px 10px 5px;
+  overflow: auto;
 }
-
 #profile-page > footer {
   grid-template-rows: auto 1fr auto;
 }
-
 .main-content {
   display: grid;
-  grid-template-columns: repeat(5, 3fr);
+  grid-template-rows: repeat(5, 3fr);
   justify-items: center;
   gap: 8px;
 }
-
 .my-content {
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-  padding: 30px;
-  margin: 20px;
-  text-align: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-
-img {
-  clip-path: circle(50% at 50% 50%);
-  height: 200px;
+  align-items: center;
+  margin: 20px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  padding: 30px;
+  text-align: center;
 }
-
+img {
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  height: 200px;
+  clip-path: circle(40%);
+}
 .about-debs {
   margin: -20px;
 }
-
 /*skill tags*/
 .skills {
-  list-style-type: none;
   display: flex;
   flex-wrap: wrap;
+  list-style-type: none;
   gap: 8px;
 }
-
 .skills > li {
   border: 1px solid rgb(211, 142, 211);
   background-color: whitesmoke;
-  color: rgb(211, 142, 211);
   padding: 0.25em;
+  color: rgb(211, 142, 211);
 }
